Made that calculator can do multiple calculations

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     background-color: burlywood;
 }
 
-#buttons {
+.buttons {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
